--- a/app/src/main/res/layout/activity_user_area.xml
+++ b/app/src/main/res/layout/activity_user_area.xml
@@ -2,6 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/colorBackground"
     android:padding="@dimen/activity_horizontal_margin">
 
     <TextView
@@ -11,7 +12,6 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:text="hello world"
         android:textAppearance="?android:attr/textAppearanceLarge" />
 
     <TextView
@@ -54,5 +54,38 @@
         android:layout_alignParentRight="true"
         android:layout_alignParentStart="true"
         android:layout_below="@+id/textView2" />
+
+    <Button
+        android:id="@+id/bReservasi"
+        style="@android:style/Widget.Material.Button.Colored"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignEnd="@+id/bObat"
+        android:layout_alignLeft="@+id/bObat"
+        android:layout_alignRight="@+id/bObat"
+        android:layout_alignStart="@+id/bObat"
+        android:layout_centerVertical="true"
+        android:text="Reservasi" />
+
+    <Button
+        android:id="@+id/bKonsultasi"
+        style="@android:style/Widget.Material.Button.Colored"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignEnd="@+id/bReservasi"
+        android:layout_alignLeft="@+id/bReservasi"
+        android:layout_alignRight="@+id/bReservasi"
+        android:layout_alignStart="@+id/bReservasi"
+        android:layout_below="@+id/bReservasi"
+        android:text="Layanan Konsultasi" />
+
+    <Button
+        android:id="@+id/bObat"
+        style="@android:style/Widget.Material.Button.Colored"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/bKonsultasi"
+        android:layout_centerHorizontal="true"
+        android:text="Layanan Pembelian Obat" />
 
 </RelativeLayout>
